# guide-yolo11-to-onnx

./: .gitignore  LICENSE  README.md  devenv.nix
onnxcpp/: CMakeLists.txt  README.md  container.nix  devenv.nix  main.cpp  package.nix  shell.nix
train/: Containerfile  README.md  export.py  inference.py  medical-pills.yaml  postraining_export.sh  pyproject.toml  shell.nix  train_container.sh  train_yolo11.py
