[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.68",
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "markupsafe==2.1.5",
    "onnx>=1.17.0",
    "onnxruntime-gpu>=1.20.1",
    "onnxslim>=0.1.47",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124"},
]
torchvision = [
  { index = "pytorch-cu124" },
]
